[package]
name = "qoiconv-rs"
version = "0.3.0"
edition = "2021"
description = "Convert between different image formats and qoi format."
authors = ["lexx"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
image = "0.24.5"
