[package]
name = "qoiconv-rs"
version = "0.5.1"
edition = "2021"
description = "Convert between different image formats and qoi format."
authors = ["lexx"]
repository = "https://github.com/lexeyOK/qoiconv-rs"
license = "MIT"
keywords = ["convert","cli","qoi"]
categories = ["command-line-utilities"]
exclude = ["/test","/qoi_test_images","cc","qoi-specification.pdf",".*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
image = "0.24.5"
indicatif = {version = "0.17.2", features = ["rayon"]}
rayon = "1.6.1"
