[package]
name = "qoi-test-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
[dependencies.qoi-test]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "qoi-fuzz-pixels"
path = "fuzz_targets/qoi-fuzz-pixels.rs"
test = false
doc = false
